--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
       <div class="container">
         <header class="text-center">
           <h2 class="title">Contact me</h2>
-          <p><a href="img/SeanSongResume.pdf" target="_blank"><b>Resume</b></a></p>
+          <p><a href="img/SeanResume.pdf" target="_blank"><b>Resume</b></a></p>
           <p><a href="https://www.linkedin.com/in/sean-song-60172770/" target="_blank"><b>LinkedIn</b></a></p> 
             <p><a href="https://github.com/seansong314/" target="_blank"><b>GitHub</b></a></p>
             <p><a href = "mailto: seansong@berkeley.edu"><b>Email</b></a></p>
